--- a/phylogeny.html
+++ b/phylogeny.html
@@ -19,117 +19,119 @@
             </div>
             <div class="panel" style="overflow-x:auto;">
                 <p>Note: I am not sure why the spacing is all weird... Everything is in the right place horizontally but vertically stretched at the bottom!</p>
-                <ul class="tree" style="width: 2900px;">
-                    <li>
-                        <ul>
-                            <li>
-                                <a href="#">Gorilla <em>gorilla</em></a>
-                            </li>
-                            <li>
-                                <ul>
-                                    <li>
-                                        <a></a><!--Unknown for tchad & chimp split-->
-                                        <ul>
-                                            <li>
-                                                <a>Pan <em>troglodytes</em> (chimpanzee)</a>
-                                            </li>
-                                            <li>
-                                                <a>Sahelanthropus <em>tchadensis</em></a>
-                                                <ul>
-                                                    <li>
-                                                        <a><b>Ardipithecus <em>ramidus</em> (Ardi)</b></a>
-                                                    </li>
-                                                    <li>
-                                                        <a>Australopithecus <em>anamensis</em></a>
-                                                        <ul>
-                                                            <li>
-                                                                <a>Australopithecus <em>afarensis</em> (Lucy)</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                    <li>
-                                                        <a></a>
-                                                        <ul>
-                                                            <li>
-                                                                <a>Paranthropus <em>aethiopicus</em></a>
-                                                            </li>
-                                                            <li>
-                                                                <a></a>
-                                                                <ul class="tree">
-                                                                    <li>
-                                                                        <a>Paranthropus <em>boisei</em></a>
-                                                                    </li>
-                                                                    <li>
-                                                                        <a>Paranthropus <em>robustus</em></a>
-                                                                    </li>
-                                                                </ul>
-                                                            </li>
-                                                            <li>
-                                                                <a>Australopithecus <em>africanus</em></a>
-                                                            </li>
-                                                            <li>
-                                                                <a></a>
-                                                                <ul class="tree">
-                                                                    <li>
-                                                                        <a>Australopithecus <em>gharhi</em></a>
-                                                                        <ul>
-                                                                            <li>
-                                                                                <a>Homo <em>florsiensis</em></a>
-                                                                            </li>
-                                                                            <li>
-                                                                                <a>Homo <em>habilis</em></a>
-                                                                            </li>
-                                                                            <li>
-                                                                                <a></a>
-                                                                                <ul>
-                                                                                    <li>
-                                                                                        <a>Homo <em>erectus</em> (African)</a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a></a>
-                                                                                        <ul>
-                                                                                            <li>
-                                                                                                <a>Homo <em>erectus</em> (Georgian)</a>
-                                                                                            </li>
-                                                                                            <li>
-                                                                                                <a>Homo <em>erectus</em> (Asian)</a>
-                                                                                            </li>
-                                                                                            <li>
-                                                                                                <a>Homo ancestor</a>
-                                                                                                <ul>
-                                                                                                    <li>
-                                                                                                        <a>Homo <em>heidelbergensis</em></a>
-                                                                                                        <ul>
-                                                                                                            <li>
-                                                                                                                <a>Homo <em>neanderthalensis</em></a>
-                                                                                                            </li>
-                                                                                                            <li>
-                                                                                                                <a>Homo <em>sapiens</em></a>
-                                                                                                            </li>
-                                                                                                        </ul>
-                                                                                                    </li>
-                                                                                                </ul>
-                                                                                            </li>
-                                                                                        </ul>
-                                                                                    </li>
-                                                                                </ul>
-                                                                            </li>
-                                                                        </ul>
-                                                                    </li>
-                                                                </ul>
-                                                            </li>
-                                                        </ul>
-                                                            
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                <div>
+                    <ul class="tree" style="width: 3500px;">
+                        <li>
+                            <ul>
+                                <li>
+                                    <a href="#">Gorilla <em>gorilla 0 MYA</em></a>
+                                </li>
+                                <li>
+                                    <ul>
+                                        <li>
+                                            <a></a><!--Unknown for tchad & chimp split-->
+                                            <ul>
+                                                <li>
+                                                    <a>Pan <em>troglodytes</em> (chimpanzee) 0 MYA</a>
+                                                </li>
+                                                <li>
+                                                    <a>Sahelanthropus <em>tchadensis</em> ~7.25 mya</a>
+                                                    <ul>
+                                                        <li>
+                                                            <a><b>Ardipithecus <em>ramidus</em> (Ardi) 5.8-4.4 MYA </b></a>
+                                                        </li>
+                                                        <li>
+                                                            <a>Australopithecus <em>anamensis</em> 3.9 MYA</a>
+                                                            <ul>
+                                                                <li>
+                                                                    <a>Australopithecus <em>afarensis</em> (Lucy) 3.1 MYA</a>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                        <li>
+                                                            <a></a>
+                                                            <ul>
+                                                                <li>
+                                                                    <a>Paranthropus <em>aethiopicus</em> 2.4 MYA</a>
+                                                                </li>
+                                                                <li>
+                                                                    <a></a>
+                                                                    <ul class="tree">
+                                                                        <li>
+                                                                            <a>Paranthropus <em>boisei</em> 1.3 MYA</a>
+                                                                        </li>
+                                                                        <li>
+                                                                            <a>Paranthropus <em>robustus</em> 1.1 MYA</a>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                                <li>
+                                                                    <a>Australopithecus <em>africanus</em> 1.8 MYA</a>
+                                                                </li>
+                                                                <li>
+                                                                    <a></a>
+                                                                    <ul class="tree">
+                                                                        <li>
+                                                                            <a>Australopithecus <em>gharhi</em> 2.5 MYA</a>
+                                                                            <ul>
+                                                                                <li>
+                                                                                    <a>Homo <em>florsiensis</em> 0.1 MYA</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a>Homo <em>habilis</em> 1.5 MYA</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a></a>
+                                                                                    <ul>
+                                                                                        <li>
+                                                                                            <a>Homo <em>erectus</em> (African) 0.75 MYA</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a></a>
+                                                                                            <ul>
+                                                                                                <li>
+                                                                                                    <a>Homo <em>erectus</em> (Georgian) 1.8 MYA</a>
+                                                                                                </li>
+                                                                                                <li>
+                                                                                                    <a>Homo <em>erectus</em> (Asian) 0.02 MYA</a>
+                                                                                                </li>
+                                                                                                <li>
+                                                                                                    <a>Homo ancestor 0.7 MYA</a>
+                                                                                                    <ul>
+                                                                                                        <li>
+                                                                                                            <a>Homo <em>heidelbergensis 0.3 MYA</em></a>
+                                                                                                            <ul>
+                                                                                                                <li>
+                                                                                                                    <a>Homo <em>neanderthalensis</em> 0.01 MYA</a>
+                                                                                                                </li>
+                                                                                                                <li>
+                                                                                                                    <a>Homo <em>sapiens</em> 0 MYA</a>
+                                                                                                                </li>
+                                                                                                            </ul>
+                                                                                                        </li>
+                                                                                                    </ul>
+                                                                                                </li>
+                                                                                            </ul>
+                                                                                        </li>
+                                                                                    </ul>
+                                                                                </li>
+                                                                            </ul>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+                                                                
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!--Time & tree container-->
             </div>
             <div class="center">
                 <a href="species.html"><button>< Back</button></a>
